# h5cpp

./: .codecov.yml  CMakeLists.txt  README.md
h5cpp/: CMakeLists.txt  h5attributereader.h  h5reader.cpp  h5reader.h  h5readwrite.cpp  h5readwrite.h  h5typemaps.h  h5typereader.h  hidcloser.h
tests/: CMakeLists.txt  README.md  read_file.cpp
tests/reader/: CMakeLists.txt  getchildrentest.cpp  read_file.cpp  readattributestest.cpp  readdatatest.cpp
